Add hover effect to printed data structures

--- a/resources/imprimatur/style.css
+++ b/resources/imprimatur/style.css
@@ -13,6 +13,10 @@
     margin: 0;
 }
 
+.imprimatur .coll.hover {
+    background: #ffff00;
+}
+
 .imprimatur .opening,
 .imprimatur .closing {
     font-family: monospace;
